@@ -1,5 +1,2 @@
 DIST winetricks-20141130.tar.gz 164917 SHA256 6088f45cac80e0a05a52b0a8885739f98b2c5ae07062bfa2aee1265d63891b56 SHA512 b7fbbcbef1a197b65c0def1cffb238d2ac58862e60aa76503171098ff35cf190a072ae7cddf865f5b03a8269702a804c7ad8ada498b922814f0aad8b2970cee1 WHIRLPOOL 16347e85d161cbf78df9d46b1b49292fe0618e6bfc32d0115e104d0bba1e5cbd6f974e6872ddb7ac8679c8dcf9eccbe0b26841ce02723d1456e0a3c3645d53ed
 DIST winetricks-gentoo-2012.11.24.tar.bz2 6398 SHA256 dded8c294cc5c2e71e4a5d1531ab165178cf3d2d1d890d0656368c2e499bfeb9 SHA512 59c93b73f3a7b2d11aefcde2ff66659ff1de21ad4b5f232f4b60572f3a48b15a6c49f369b1696862bf1b33fde190bf5598945e9536fb41ddec42d8def4d2be2a WHIRLPOOL 268da9e06712a678fbbcfff8eac1fca364b5e46f0a9c48a591eb88f03260b1a55f203eb2908bfe1f0a534b77c866127ff6f7049b0e43fe8abeaaa26fe55de75b
-EBUILD winetricks-20141130.ebuild 1953 SHA256 7e89d0e8f0d3e7102667218ea5334c1f1e263b2b32db64212f993b8f362ba54c SHA512 3b880a84e574031b5dac1d6eeba7cb2761e52d63be529b6ea8938024d3fa44f2d21073b272704e276c4d4c193cd9b9ab7037074b52f9bb88381e6c7d5290a69b WHIRLPOOL 096280a282283f83f46232b3c294921fac475b77cd57a109ebfc0685d0ef85eb8530d1fbbab3306f644f5d2ff9d68a0aea753164ba46131882161b76ce16f985
-MISC ChangeLog 178 SHA256 d20a137a19ed0c7861f5f67e7b2bbd36acb638c9d5cbfdddce9b5b452275755f SHA512 d8743edae5caea073d8ca18607209f0ef37e1acda8cd278bd67b2347bd914ebeab02c8c39bd00b65f84ec4fc9626ddd57f3d3ff662b745ad3a1380a9d28aff10 WHIRLPOOL b7ac405e1ce821d1f18ca25bbebb7493156de8c63fbcd0f945c92e25641ca1ead78cb383004cd83d928428330ac37ff4a34a69d0e24eee3b0a214d9d990a28a6
-MISC metadata.xml 352 SHA256 2053c7fa6dc44c98e9e1d66861bbf5c96b1116931a97b39a21547127d1b655ec SHA512 1e39d4b4c4756ff6bf0dbfdb9cd42cee1e4a355e700db0ed6abd9a4e89da72b8f20c878be2ac5f5038b9b5670f830ddfde938a3a03e522576375a532adeb26fe WHIRLPOOL 116a258ec836b0e552f304eb98b51da0474e0cde262bc1921b5ff9bb817393a650f845b456a2fdf6f6de73c5354777d45ce0483ace31661e1a461ec926b7776c
